--- a/templates/repository/repository.twig
+++ b/templates/repository/repository.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import "partials/macros.twig" as macros %}
 
 {% set page_title = repository.name %}
 
@@ -18,7 +19,7 @@
             <dt class="split--left__title">Github Source</dt>
             <dd class="split--left__value">
                 <a href="{{ githubRepo(repository.githubUser, repository.githubRepo) }}">{{ repository.githubUser }}/{{ repository.githubRepo }}</a>
-                <svg class="icon"><use xlink:href="#github"></use></svg>
+                {{ macros.icon('github') }}
             </dd>
 
             {% if repository.ebName %}
@@ -59,7 +60,7 @@
             <dl class="split--left mbn">
                 {% if repository.buildCmd %}
                     <dt class="split--left__title">
-                        <svg class="icon" title="On build"><use xlink:href="#code"></use></svg>
+                        {{ macros.icon('code', '', 'On build') }}
                         Build Command
                     </dt>
                     <dd class="split--left__value">{{ repository.buildCmd }}</dd>
@@ -67,7 +68,7 @@
 
                 {% if repository.buildTransformCmd %}
                     <dt class="split--left__title">
-                        <svg class="icon" title="On push"><use xlink:href="#swap-2"></use></svg>
+                        {{ macros.icon('swap-2', '', 'On push') }}
                         Build Transform Command
                     </dt>
                     <dd class="split--left__value">{{ repository.buildTransformCmd }}</dd>
@@ -75,7 +76,7 @@
 
                 {% if repository.prePushCmd %}
                     <dt class="split--left__title">
-                        <svg class="icon" title="On push"><use xlink:href="#swap-2"></use></svg>
+                        {{ macros.icon('swap-2', '', 'On push') }}
                         Pre-Push Command
                     </dt>
                     <dd class="split--left__value">{{ repository.prePushCmd }}</dd>
@@ -83,7 +84,7 @@
 
                 {% if repository.postPushCmd %}
                     <dt class="split--left__title">
-                        <svg class="icon" title="On push"><use xlink:href="#swap-2"></use></svg>
+                        {{ macros.icon('swap-2', '', 'On push') }}
                         Post-Push Command
                     </dt>
                     <dd class="split--left__value">{{ repository.postPushCmd }}</dd>
@@ -133,7 +134,7 @@
                 <tr>
                     <th>Environment</th>
                     <th>Server</th>
-                    <th>Path / EB Environment / EC2 Pool</th>
+                    <th>Path</th>
                     <th>URL</th>
                 </tr>
             </thead>
