--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import "partials/macros.twig" as macros %}
 
 {% set isSelf = (currentHalUser.id == user.id) %}
 {% set name = getUsersName(user) %}
@@ -54,7 +55,7 @@
         <li><b>Total Pushes:</b> {{ pushes }}</li>
         <li>
             <b>Github Page:</b> <a href="http://git/{{ user.handle }}">http://git/{{ user.handle }}</a>
-            <svg class="icon"><use xlink:href="#github"></use></svg>
+            {{ macros.icon('github') }}
         </li>
     </ul>
 
