--- a/sass/style.scss
+++ b/sass/style.scss
@@ -76,3 +76,4 @@
 @import "partials/patterns/inline-list";
 @import "partials/patterns/pagination";
 @import "partials/patterns/stat-list";
+@import "partials/patterns/scroll-thing";
