--- a/sass/partials/base/_code.scss
+++ b/sass/partials/base/_code.scss
@@ -7,6 +7,7 @@ code {
 pre {
     color: $red;
     background: $light-grey;
+    margin: 0;
     padding: .2em;
 
     @include adjust-font-size-to(ms(-2));
