--- a/sass/partials/base/_tables.scss
+++ b/sass/partials/base/_tables.scss
@@ -11,6 +11,12 @@ tbody tr {
     @include adjust-font-size-to(ms(-1));
 }
 
+.table--top-aligned {
+    td {
+        vertical-align: top;
+    }
+}
+
 .table-breathe::before
 {
     content: '';
@@ -35,6 +41,13 @@ th.table-mid-header {
 }
 
 .tablesaw-stack {
+
+    .tablesaw-collapse {
+        @include breakpoint(40em) {
+            display: none;
+        }
+    }
+
     .table-priority-45 {
         @include breakpoint(40em) {
             display: none;
