--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,6 +57,7 @@
 @import "partials/pr";
 @import "partials/radio-grid";
 @import "partials/search";
+@import "partials/kraken";
 
 @import "partials/base/code";
 @import "partials/base/headings";
