--- a/templates/kraken/application/add-schema.twig
+++ b/templates/kraken/application/add-schema.twig
@@ -3,12 +3,11 @@
 {% set page_title = "Add Property" %}
 
 {% block content %}
-    <h2>
-        Add Property to Configuration Schema
-        <sub><a href="{{ urlFor('kraken.application', {id: application.id}) }}">back</a></sub>
-    </h2>
 
-    <h3 class="mbn">Application ID</h3>
+    <a href="{{ urlFor('kraken.application', {id: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
+    <h2>Add Property to Configuration Schema</h2>
+
+    <h3 class="mbn">Application</h3>
     <p>{{ application.id }}</p>
 
     {{ block('add_property') }}
@@ -16,8 +15,6 @@
 {% endblock %}
 
 {% block add_property %}
-    <h2>Add Property</h2>
-
     <div class="form-wrapper">
         {% if errors %}
             <ul class="error-list">
