--- a/templates/kraken/application/view-property.twig
+++ b/templates/kraken/application/view-property.twig
@@ -4,10 +4,9 @@
 {% set page_title = "View Configuration Property" %}
 
 {% block content %}
-    <h2>
-        Configuration Property for <strong>{{ application.id }}</strong>
-        <sub><a href="{{ urlFor('kraken.application.environment', {id: application.id, environment: environment.id}) }}">back</a></sub>
-    </h2>
+
+    <a href="{{ urlFor('kraken.application.environment', {id: application.id, environment: environment.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
+    <h2>Configuration Property for <strong>{{ application.id }}</strong></h2>
 
     <h3 class="mbn">Application</h3>
     <p>{{ application.id }}</p>
