--- a/templates/kraken/applications.twig
+++ b/templates/kraken/applications.twig
@@ -3,10 +3,9 @@
 {% set page_title = "Applications" %}
 
 {% block content %}
-    <h2>
-        Applications
-        <sub><a href="{{ urlFor('kraken') }}">back</a></sub>
-    </h2>
+
+    <a href="{{ urlFor('kraken') }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
+    <h2>Applications</h2>
 
     {% if applications %}
         <table>
